Implement Change password endpoint
